// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminStates — structural snapshots > AdminCardsSkeleton renders expected structure 1`] = `
<div
  class="w-full min-w-0 animate-in fade-in duration-150"
>
  <div
    class="grid grid-cols-1 gap-3 lg:gap-4 sm:grid-cols-2 lg:grid-cols-3"
  >
    <div
      class="rounded-astra border border-border/10 bg-card/40 p-4 space-y-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-4 w-32 border-0"
        />
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-5 w-14 rounded-full border-0"
        />
      </div>
      <div
        aria-hidden="true"
        class="rounded-astra border-border/10 animate-pulse h-2 w-full border-0 bg-muted/10"
      />
      <div
        aria-hidden="true"
        class="rounded-astra border-border/10 animate-pulse h-2 w-2/3 border-0 bg-muted/10"
      />
      <div
        class="flex gap-2 pt-1"
      >
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-8 flex-1 border-0"
        />
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-8 flex-1 border-0"
        />
      </div>
    </div>
    <div
      class="rounded-astra border border-border/10 bg-card/40 p-4 space-y-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-4 w-32 border-0"
        />
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-5 w-14 rounded-full border-0"
        />
      </div>
      <div
        aria-hidden="true"
        class="rounded-astra border-border/10 animate-pulse h-2 w-full border-0 bg-muted/10"
      />
      <div
        aria-hidden="true"
        class="rounded-astra border-border/10 animate-pulse h-2 w-2/3 border-0 bg-muted/10"
      />
      <div
        class="flex gap-2 pt-1"
      >
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-8 flex-1 border-0"
        />
        <div
          aria-hidden="true"
          class="rounded-astra bg-muted/15 border-border/10 animate-pulse h-8 flex-1 border-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminStates — structural snapshots > AdminPageSkeleton renders expected structure 1`] = `
<div
  class="w-full min-w-0 space-y-4 lg:space-y-6 animate-in fade-in duration-150"
>
  <div
    class="space-y-2"
  >
    <div
      aria-hidden="true"
      class="rounded-astra bg-muted/15 border border-border/10 animate-pulse h-5 w-48"
    />
    <div
      aria-hidden="true"
      class="rounded-astra border-border/10 animate-pulse h-3 w-72 border-0 bg-muted/10"
    />
  </div>
  <div
    class="admin-kpi-strip"
  >
    <div
      aria-hidden="true"
      class="rounded-astra bg-muted/15 border border-border/10 animate-pulse h-14"
    />
    <div
      aria-hidden="true"
      class="rounded-astra bg-muted/15 border border-border/10 animate-pulse h-14"
    />
    <div
      aria-hidden="true"
      class="rounded-astra bg-muted/15 border border-border/10 animate-pulse h-14"
    />
    <div
      aria-hidden="true"
      class="rounded-astra bg-muted/15 border border-border/10 animate-pulse h-14"
    />
  </div>
  <div
    class="space-y-1"
  >
    <div
      aria-hidden="true"
      class="rounded-astra border animate-pulse h-[42px] rounded-lg bg-muted/10 border-border/8"
    />
    <div
      aria-hidden="true"
      class="rounded-astra border animate-pulse h-[42px] rounded-lg bg-muted/10 border-border/8"
    />
    <div
      aria-hidden="true"
      class="rounded-astra border animate-pulse h-[42px] rounded-lg bg-muted/10 border-border/8"
    />
  </div>
</div>
`;

exports[`AdminStates — structural snapshots > AdminTableSkeleton renders expected structure 1`] = `
<div
  class="w-full min-w-0 space-y-1 animate-in fade-in duration-150"
>
  <div
    aria-hidden="true"
    class="rounded-astra bg-muted/15 border border-border/10 animate-pulse h-9 rounded-lg"
  />
  <div
    aria-hidden="true"
    class="rounded-astra border animate-pulse h-[42px] rounded-lg bg-muted/10 border-border/8"
  />
  <div
    aria-hidden="true"
    class="rounded-astra border animate-pulse h-[42px] rounded-lg bg-muted/10 border-border/8"
  />
</div>
`;
